Perma make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:725: WindowsDllBlocklist.obj] Error 1 when Gecko 82 merges to Beta on 2020-09-21
Categories
(Firefox :: Launcher Process, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | unaffected |
firefox82 | blocking | fixed |
People
(Reporter: aryx, Assigned: toshi)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Toshi, the fix would be needed before next Monday.
central-as-beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=314b5bf834e4bd95b88642c4397504af8c18ac2e&selectedTaskRun=EHMTz4hXQhGssU9iZEcAcw.0
Log: https://treeherder.mozilla.org/logviewer.html#?job_id=315953162&repo=try
[task 2020-09-17T13:57:46.297Z] 13:57:46 INFO - /builds/worker/workspace/obj-build/dist/include/mozilla/interceptor/PatcherDetour.h(909,50): error: lambda capture 'this' is not used [-Werror,-Wunused-lambda-capture]
[task 2020-09-17T13:57:46.297Z] 13:57:46 INFO - auto clearInstanceOnFailure = MakeScopeExit(this, aOutTramp, &tramp,
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - ^
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - /builds/worker/workspace/obj-build/dist/include/mozilla/interceptor/PatcherDetour.h(467,5): note: in instantiation of member function 'mozilla::interceptor::WindowsDllDetourPatcher<mozilla::interceptor::VMSharingPolicyShared>::CreateTrampoline' requested here
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - CreateTrampoline(target, trampPool, tramp, aHookDest, aOrigFunc);
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - ^
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - /builds/worker/workspace/obj-build/dist/include/nsWindowsDllInterceptor.h(475,27): note: in instantiation of member function 'mozilla::interceptor::WindowsDllDetourPatcher<mozilla::interceptor::VMSharingPolicyShared>::AddHook' requested here
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - return mDetourPatcher.AddHook(aProc, aHookDest, aOrigFunc);
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - ^
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - /builds/worker/workspace/obj-build/dist/include/nsWindowsDllInterceptor.h(429,12): note: in instantiation of member function 'mozilla::interceptor::WindowsDllInterceptor<mozilla::interceptor::VMSharingPolicyShared>::AddDetour' requested here
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - return AddDetour(proc, aHookDest, aOrigFunc);
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - ^
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - /builds/worker/workspace/obj-build/dist/include/nsWindowsDllInterceptor.h(186,26): note: in instantiation of member function 'mozilla::interceptor::WindowsDllInterceptor<mozilla::interceptor::VMSharingPolicyShared>::AddDetour' requested here
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - return aInterceptor->AddDetour(aName, reinterpret_cast<intptr_t>(aHookDest),
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - ^
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - /builds/worker/workspace/obj-build/dist/include/nsWindowsDllInterceptor.h(197,28): note: in instantiation of member function 'mozilla::interceptor::FuncHook<mozilla::interceptor::WindowsDllInterceptor<mozilla::interceptor::VMSharingPolicyShared>, long (*)(wchar_t *, unsigned long *, _UNICODE_STRING , void **) attribute((stdcall))>::ApplyDetour' requested here
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - result = ctx->mHook->ApplyDetour(ctx->mInterceptor, ctx->mName,
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - ^
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - /builds/worker/workspace/obj-build/dist/include/nsWindowsDllInterceptor.h(141,47): note: in instantiation of member function 'mozilla::interceptor::FuncHook<mozilla::interceptor::WindowsDllInterceptor<mozilla::interceptor::VMSharingPolicyShared>, long ()(wchar_t *, unsigned long *, _UNICODE_STRING , void **) attribute((stdcall))>::InitOnceCallback' requested here
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - return ::InitOnceExecuteOnce(&mInitOnce, &InitOnceCallback, &ctx,
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - ^
[task 2020-09-17T13:57:46.298Z] 13:57:46 INFO - /builds/worker/checkouts/gecko/mozglue/dllservices/WindowsDllBlocklist.cpp(663,29): note: in instantiation of member function 'mozilla::interceptor::FuncHook<mozilla::interceptor::WindowsDllInterceptor<mozilla::interceptor::VMSharingPolicyShared>, long ()(wchar_t *, unsigned long *, _UNICODE_STRING *, void **) attribute((stdcall))>::SetDetour' requested here
[task 2020-09-17T13:57:46.299Z] 13:57:46 INFO - bool ok = stub_LdrLoadDll.SetDetour(NtDllIntercept, "LdrLoadDll",
[task 2020-09-17T13:57:46.299Z] 13:57:46 INFO - ^
[task 2020-09-17T13:57:46.299Z] 13:57:46 INFO - In file included from /builds/worker/checkouts/gecko/mozglue/dllservices/WindowsDllBlocklist.cpp:16:
[task 2020-09-17T13:57:46.299Z] 13:57:46 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/nsWindowsDllInterceptor.h:28:
[task 2020-09-17T13:57:46.301Z] 13:57:46 INFO - /builds/worker/workspace/obj-build/dist/include/mozilla/interceptor/PatcherDetour.h(910,51): error: lambda capture 'origBytes' is not used [-Werror,-Wunused-lambda-capture]
[task 2020-09-17T13:57:46.301Z] 13:57:46 INFO - &origBytes -> void {
[task 2020-09-17T13:57:46.301Z] 13:57:46 INFO - ^
[task 2020-09-17T13:57:46.301Z] 13:57:46 INFO - 2 errors generated.
[task 2020-09-17T13:57:46.301Z] 13:57:46 ERROR - make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:725: WindowsDllBlocklist.obj] Error 1
Assignee | ||
Comment 1•5 years ago
|
||
This patch bypasses -Wunused-lambda-capture
warnings by using Unused
as
Bug 1375386 did. Having two definitions with #ifdef
confuses clang-format.
Using Unused
seems like the easiest approach.
Updated•5 years ago
|
Updated•5 years ago
|
Comment 3•5 years ago
|
||
bugherder |
Assignee | ||
Comment 4•5 years ago
|
||
Thank you for letting me know. Now that the fix landed, can you please try beta build, again?
![]() |
Reporter | |
Comment 5•5 years ago
|
||
No issues with the central-as-beta build today (your patch had been imported).
Updated•4 years ago
|
Updated•4 years ago
|
Description
•